# feed-merger

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog.md  readme.md
.github/workflows/: build-clang.yml  build-gcc.yml  clang.yml  gcc.yml
ci/: cpplint.sh  drone.io.sh
src/: CMakeLists.txt  Curly.cpp  Curly.hpp  StringFunctions.cpp  StringFunctions.hpp  feed-merger.cbp  main.cpp
src/atom1.0/: Category.cpp  Category.hpp  Entry.cpp  Entry.hpp  Link.cpp  Link.hpp  Parser.cpp  Parser.hpp  PersonConstruct.cpp  PersonConstruct.hpp
src/basic-rss/: Channel.cpp  Channel.hpp  Days.cpp  Days.hpp  Image.cpp  Image.hpp  Parser.cpp  Parser.hpp  TextInput.cpp  TextInput.hpp  readme.md
src/conversion/: Rss091ToRss20.cpp  Rss091ToRss20.hpp
src/rfc822/: Date.cpp  Date.hpp
src/rss0.91/: Channel.cpp  Channel.hpp  Image.hpp  Item.cpp  Item.hpp  Parser.cpp  Parser.hpp  TextInput.hpp
src/rss2.0/: Category.cpp  Category.hpp  Channel.cpp  Channel.hpp  Cloud.cpp  Cloud.hpp  Days.cpp  Days.hpp  Enclosure.cpp  Enclosure.hpp  Guid.cpp  Guid.hpp  Image.cpp  Image.hpp  Item.cpp  Item.hpp  Merger.cpp  Merger.hpp  Parser.cpp  Parser.hpp  Protocol.cpp  Protocol.hpp  Source.cpp  Source.hpp  TextInput.cpp  TextInput.hpp  Writer.cpp  Writer.hpp
src/xml/: XMLDocument.cpp  XMLDocument.hpp  XMLNode.cpp  XMLNode.hpp
tests/: CMakeLists.txt
tests/atom1.0/: CMakeLists.txt
tests/atom1.0/parser/: CMakeLists.txt
tests/atom1.0/parser/category/: CMakeLists.txt  category-atom.xml  category-label.xml  category-minimal.xml  category-scheme.xml  category.cbp  main.cpp
tests/atom1.0/parser/link/: CMakeLists.txt  link-atom.xml  link-minimal.xml  link-related.xml  link-type.xml  link.cbp  main.cpp
tests/atom1.0/parser/person-construct/: CMakeLists.txt  main.cpp  person-construct-atom.xml  person-construct-minimal.xml  person-construct-uri.xml  person-construct.cbp
tests/components/: CMakeLists.txt  component-tests.cbp  main.cpp
tests/components/basic-rss/: Days.cpp  Image.cpp
tests/components/rss2.0/: Category.cpp  Cloud.cpp  Enclosure.cpp  Guid.cpp  Protocol.cpp  Source.cpp
tests/feed-merger/: CMakeLists.txt
tests/rfc822_date/: CMakeLists.txt  rfc822_date.cbp  rfc822_date.cpp
tests/rss0.91/: CMakeLists.txt
tests/rss0.91/spec-example-complete/: CMakeLists.txt  complete-example-rss-0.91.xml  main.cpp  spec-sample-complete.cbp
tests/rss0.91/spec-example-simple/: CMakeLists.txt  main.cpp  spec-sample-simple.cbp
tests/rss2.0/: CMakeLists.txt
tests/rss2.0/parser/: CMakeLists.txt
tests/rss2.0/parser/category-element/: CMakeLists.txt  category-element.cbp  category-rss-2.xml  main.cpp
tests/rss2.0/parser/category-element-channel/: CMakeLists.txt  category-channel-rss-2.xml  category-element-channel.cbp  main.cpp
tests/rss2.0/parser/category-element-multiple/: CMakeLists.txt  category-element-multiple.cbp  category-multi-rss-2.xml  main.cpp
tests/rss2.0/parser/category-element-nd/: CMakeLists.txt  category-element-nd.cbp  category-rss-2.xml  main.cpp
tests/rss2.0/parser/cloud-channel-element/: CMakeLists.txt  cloud-element-rss-2.xml  cloud-element.cbp  main.cpp
tests/rss2.0/parser/devops-sample/: CMakeLists.txt  devops-sample.cbp  devops.xml  main.cpp
tests/rss2.0/parser/enclosure-element/: CMakeLists.txt  enclosure-element.cbp  enclosure-rss-2.xml  main.cpp
tests/rss2.0/parser/image-element/: CMakeLists.txt  image-element-rss-2.xml  image-element.cbp  main.cpp
tests/rss2.0/parser/min-spec-sample/: CMakeLists.txt  main.cpp  min-sample-rss-2.xml  min-spec-sample.cbp
tests/rss2.0/parser/skipdays-element/: CMakeLists.txt  main.cpp  skipdays-element.cbp  skipdays-rss-2.xml
tests/rss2.0/parser/skiphours-element/: CMakeLists.txt  main.cpp  skiphours-element.cbp  skiphours-rss-2.xml
tests/rss2.0/parser/source-element/: CMakeLists.txt  main.cpp  source-element.cbp  source-rss-2.xml
tests/rss2.0/parser/spec-sample/: CMakeLists.txt  main.cpp  spec-sample.cbp
tests/rss2.0/parser/textinput-element/: CMakeLists.txt  main.cpp  textinput-element.cbp  textinput-rss-2.xml
tests/rss2.0/writer/: CMakeLists.txt
tests/rss2.0/writer/generic-write/: CMakeLists.txt  generic-write.cbp  main.cpp
